Changes to be committed:

--- a/web/components/nav.html
+++ b/web/components/nav.html
@@ -72,18 +72,18 @@
 </style>
 <nav class="navbar">
   <div class="nav-container">
-    <a href="index.html" class="logo">
+    <a href="/web/index.html" class="logo">
       <img src="assets/icons/logo.svg" alt="">
       <span>Nexelink</span>
     </a>
     <ul class="nav-links" id="navMenu">
-      <li><a href="index.html"><i class="fas fa-home"></i> 首頁</a></li>
-      <li><a href="about.html"><i class="fas fa-users"></i> 關於</a></li>
-      <li><a href="products.html"><i class="fas fa-box"></i> 產品</a></li>
-      <li><a href="games.html"><i class="fas fa-gamepad"></i> 遊戲</a></li>
-      <li><a href="contact.html"><i class="fas fa-envelope"></i> 聯絡</a></li>
-      <li><a href="login.html"><i class="fas fa-sign-in-alt"></i> 登入</a></li>
-      <li><a href="member.html"><i class="fas fa-user-circle"></i> 會員</a></li>
+      <li><a href="/web/index.html"><i class="fas fa-home"></i> 首頁</a></li>
+      <li><a href="/web/about.html"><i class="fas fa-users"></i> 關於</a></li>
+      <li><a href="/web/products.html"><i class="fas fa-box"></i> 產品</a></li>
+      <li><a href="/web/games.html"><i class="fas fa-gamepad"></i> 遊戲</a></li>
+      <li><a href="/web/contact.html"><i class="fas fa-envelope"></i> 聯絡</a></li>
+      <li><a href="/web/login.html"><i class="fas fa-sign-in-alt"></i> 登入</a></li>
+      <li><a href="/web/member.html"><i class="fas fa-user-circle"></i> 會員</a></li>
     </ul>
     <button class="hamburger" id="hamburgerBtn">
       <i class="fas fa-bars"></i>
