Changes to be committed:

--- a/components/footer.html
+++ b/components/footer.html
@@ -41,7 +41,7 @@
   <div class="social-icons">
     <i class="fab fa-facebook"></i>
     <i class="fab fa-youtube"></i>
-    <i class="fab fa-instagram"></i>
+    <a href="https://www.instagram.com/nexelink?igsh=YmY0bnExeGc4MG8y&utm_source=qr"></a><i class="fab fa-instagram"></i>
   </div>
   <p style="margin-top: 12px; font-size: 0.85rem; color: #ccc;">&copy; 2025 Nexelink. All rights reserved.</p>
 </footer>
