Changes to be committed:

--- a/components/footer.html
+++ b/components/footer.html
@@ -37,6 +37,7 @@
   <div class="footer-links">
   <a href="/web/faq.html"><i class="fas fa-question-circle"></i> 常見問題</a>
   <a href="/web/jobs.html"><i class="fas fa-briefcase"></i> 人才招募</a>
+  <a href="/web/music/music.html"><i class="fas fa-music"></i> 音樂術語查詢</a>
   </div>
   <div class="social-icons">
     <i class="fab fa-facebook"></i>
